MDEV-24279 Segfault after 1 day and 5 minutes uptime

feedback plugin now fakes a SHOW command to force
create_schema_table() to instantiate the table at once,
not lazily.

The test from plugins.feedback_plugin_send applies.

Caused by e64084d5a3a7